k8s-prometheus-grafana-pv/grafana/grafana-svc.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: grafana
  name: grafana-service
  namespace: prometheus
spec:
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 3000
  selector:
    app: grafana
  type: NodePort
